Fix buttons and scrollbar reflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,30 +1,27 @@
 html {
   padding: 0;
   margin: 0;
-  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   /* Fix sticky header scrolling */
-  scroll-padding-top: 48px
+  scroll-padding-top: 48px;
+
+  /* Always have a scroll bar to ensure no reflow. */
+  overflow-y: scroll;
 }
 
 body {
   padding: 0;
   margin: 0;
-  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  
 }
 
 #__next {
-  height: 100%;
   display: flex;
   flex-direction: column;
-}
-
-main {
-  height: calc(100% - 48px);
 }
 
 a {
